manifests/base/deployment-config.yaml
---
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  name: peribolos-as-service
spec:
  serviceAccountName: peribolos-as-service
  test: false
  replicas: 1
  selector:
    app.kubernetes.io/name: peribolos-as-service
    app.kubernetes.io/component: peribolos
    app.kubernetes.io/managed-by: sig-services
    service: peribolos-as-service
  template:
    metadata:
      annotations:
        alpha.image.policy.openshift.io/resolve-names: '*'
      labels:
        app.kubernetes.io/name: peribolos-as-service
        app.kubernetes.io/component: peribolos
        app.kubernetes.io/managed-by: sig-services
        service: peribolos-as-service
    spec:
      serviceAccountName: peribolos-as-service
      containers:
        - name: peribolos-as-service
          image: peribolos-service-controller:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              protocol: TCP
