manifests/base/route.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: peribolos-as-service
spec:
  to:
    kind: Service
    name: peribolos-as-service
